css/siteSpecific.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

@font-face {
  font-family: 'League Gothic';
  font-weight: 400;
  src:  url('../fonts/League Gothic.otf');
}



h1,
h2{
    font-family:'League Gothic';
    font-weight: 400;
    letter-spacing: 0.04em;
}

h1 {
    font-size: 3em;
    margin: 0.20em 0 0.67em 0;
}

h2{
    font-size: 2em;
    margin: 0.20em 0 0.50em 0;
    letter-spacing: 0.02em;
}

h5.blockHeading {
    font-size: 1.7em;
    margin: 0.20em 0 0.50em 0;
    letter-spacing: 0.02em;
}

h3 {
    font-size: 1.2em;
    margin: 0.2em 0 0.5em 0;
}

h4 {
    font-size: 1.1em;
    margin: 0.2em 0 0.5em 0;
}

/* anchors */

a{
    text-decoration: underline;
}

a:hover{
    text-decoration: none;
}

.nonContent a{
    color: #FF634F;
}

.content a{
    color: #FF1E00;
}

/* paragraphs and bodies of text */

body{
    background-color: #000;
    background-image: url('../img/the-sanstream.png');
    background-position: top left;
    background-repeat: no-repeat;
    font-size: 16px;
    width: 100%;
    font-family: "Calibri","Arial";
}

p{
    line-height: 1.2em;
    min-width: 0.8em;
}

.siteFrame {
    background-color: rgba(255,255,255,0.7);
    margin: 1% 2%;
    padding: 50px 2% 20px;
    position: relative;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

.infoBlock,
.pane{
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
 }

 .contentBox,
.pane{
    position: relative;
}

/* landscape specific styling */

.landscape .pane{
    display: inline-block;
    vertical-align: top;
}

#extended-bio {
    overflow: hidden;
    height: 0;
    opacity: 0;
    transition: opacity 1s;
}

#extended-bio.shown{
    height: auto;
    opacity: 1;
}

@media only screen and (min-width: 65em) {

    .pane{
        display: inline-block;
        vertical-align: top;
    }

    .pane1{
    width: 22%;
    }

    .pane2{
        width: 22%;
    }

    .contentBox{
        width: 55%;
    }

}


/* portrait specific styling */


header{
    margin-bottom: 2%;
    font-family: Arial;
}

header h2{
    display: inline;
}

header img.pictureOfMe{
    float: left;
    margin: 10px;
}

header p{
    font-size: 0.8em;
}

section.content{
    width: auto; 
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

section.content h2{
    border-bottom: 1px solid #999;
}

section.page-chunk{
    margin-bottom: 1em;
}

/****************************************************************/
.gallery .galleryItem{
    display: inline-block;
    margin: 6px 4px 14px 4px;
    position: relative;
    vertical-align: top;
    width: 162px;
    height: 120px;
    position:relative;
}

.gallery .galleryItem a.imageLink{
    display: inline-block;
    vertical-align: top;
    position:relative;
    height: 100px;
    width: 160px;
    border: 1px solid #444;
    overflow: hidden;
    z-index: 12;
}

.gallery .galleryItem a.imageLink:hover{
    border-color: #000;
}

.gallery .galleryItem a.imageLink img{
    position: absolute;
    z-index: 10;
}

.gallery .galleryItem a.imageLink img.left{
    left:0;
}
.gallery .galleryItem a.imageLink img.right{
    right:0;
    }
.gallery .galleryItem a.imageLink img.top{
    top: 0;
}
.gallery .galleryItem a.imageLink img.bottom{
    bottom:0;
}

.gallery .galleryItem a.buyItem{
    background: none repeat scroll 0 0 #00ACFC;
    background: -moz-linear-gradient(top,  #00acfc 0%, #00617f 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00acfc), color-stop(100%,#00617f)); /* Chrome,Safari4+ */
    background: linear-gradient(to bottom,  #00acfc 0%,#00617f 100%); /* W3C */
    border: 1px solid #999999;
    border-radius: 2px 2px 2px 10px;
    bottom: -8px;
    color: #FFFFFF;
    font-family: Arial;
    font-size: 0.9em;
    padding: 3px 6px 4px 8px;
    position: absolute;
    right: 0;
    z-index: 10;
    opacity: 0.7;
    text-decoration: none;
}

.gallery .galleryItem a.buyItem:hover{
    opacity: 1;
    text-decoration: none;
}

/****************************************************************/


.infoBlock{
    padding: 15px;
}

.nonContent{
    background-color: #444;
    overflow: hidden;
    color: #eee;
    margin-bottom: 3px;
    border-left: 4px solid #FF7A00;
}

.content{
    background-color: #fefefe;
    color: #555; 
    margin-bottom: 3px;
    border-left: 3px solid #FF7A00;
    border-top: 1px solid #444;
    position: relative;
}

.content:before{
    height: 100%;
    position: absolute;
    display: block;
    content: '';
    border-left: 3px solid #FFE100;
    top: 0;
    left: 0;
}


/** block specific styling **/


nav ul{
    padding: 0;
    margin: 0;
}

nav li{
    margin: auto;
    display: inline-block;
    vertical-align: bottom; 
}

nav a{
    border-bottom: 2px solid #00B8E3;
    color: #000 !important;
    font-size: 1em;
    margin: 2px;
    width: 80px;
    text-align: center;
    text-decoration: none;
}

nav li a,
nav li a span{
    display: block;
}

nav li a img{
    height: auto;
    display: inline-block;
    width: 50%;
}

.landscape .pane2 .infoBlock{
    margin-bottom: 1%;
}

.portrait .myActivity h5{
    display: none;
}


.portrait nav h5{
    display: none;
}

.portrait footer{
    display: block;
}

.landscape .myActivity{
    /*height: 50%;*/
}

.myActivity .tweets{
    height: 70%;
    font-size: 0.8em;
    list-style: none;
    padding: 4px;
    margin: 0;
    border-radius: 4px;
    border: 1px solid #444;
    overflow-y: auto;
    font-family: Arial;
    line-height: 1.3em;
}
.myActivity .tweets li {
    border-bottom: 1px dashed #777777;
    padding: 2%;
    width: 90%;
}

footer{
     font-size: 0.8em;
    line-height: 1em;
}


/* icon font: */

@font-face {
    font-family: 'icomoon';
    src:url('../fonts/iconFonts/icomoon.eot');
    src:url('../fonts/iconFonts/icomoon.eot?#iefix') format('embedded-opentype'),
        url('../fonts/iconFonts/icomoon.woff') format('woff'),
        url('../fonts/iconFonts/icomoon.ttf') format('truetype'),
        url('../fonts/iconFonts/icomoon.svg#icomoon') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* Use the following CSS code if you want to use data attributes for inserting your icons */
[data-icon]:before {
    font-family: icomoon;
    content: attr(data-icon);
    speak: none;
    font-weight: normal;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    font-size: 0.9em;
    padding:0 7px 0 0;
}


/*****************************************************/

article.post{
    margin-bottom: 2em;
}
article.post .post_date,
article.single_post .post_date{
    font-size: 0.7em;
}

article.post h2 a{
    font-weight: 400;
}

article.post .post_category {
    font-size: 0.7em;
}

article.post .post_intro {
    border-bottom: 1px dashed #999999;
    padding: 1em 0;
}

/*****************************************************/

article pre{
    margin: 1em 1em 1.5em 1em;
    padding: 1em;
    border: 1px dotted #B3C1CE;
    background-color: #E8F2FC;
    font-size: 0.9em;
}

article.single_post img.pyro-image.alignment-none{
    max-width: 100%;
}

.fieldsetForm{
    max-width: 400px;
}

.fieldsetForm label{
    padding: 0 0 0 5px;
}

.fieldsetForm input[type='text'],
.fieldsetForm input[type='password'],
.fieldsetForm textarea{
    border: 1px solid #555;
    border-radius: 3px;
    width: 95%;
    margin-bottom: 1em;
    padding: 5px 1%;
    box-sizing: -moz-box-sizing;
    box-sizing: box-sizing;
    box-sizing: -webkit-box-sizing;
}
/*****************************************************/
/* twitter feed */

#newsfeed .twitter_feed ul.rss{
    margin: 1em 0;
    padding: 0;
    list-style: none;
}


#newsfeed .twitter_feed ul.rss p.date{
    margin: 0.5em 0 1em 0;
    font-size: 0.8em;
}

